# aoirint.com-archive-20211120

./: .gitignore  .gitmodules  404.html  CNAME  MANIFEST.in  Makefile  README.md  atom.xml  config.yml  index.html  publish_pypi.sh  publish_testpypi.sh  requirements.txt  rss.rdf  serve.sh  serve_samples.sh  setup.cfg  sitemap.xml
.github/workflows/: deploy.yml  deploy_pypi.yml  main.yml
aoirint_miyadaiku_theme_blog/: __init__.py  config.yml
aoirint_miyadaiku_theme_blog/contents/: index.yml  index_category.yml  index_tag.yml
aoirint_miyadaiku_theme_blog/templates/: base.html  page_article.html  page_index.html  part_category.html
blog/: atom.xml  index.html  rss.rdf
blog/category/: index.html
blog/tags/: index.html
category/Arduino/: index.html
category/Blogging/: index.html
category/Command Utility/: index.html
category/Docker/: index.html
category/Editor/: index.html
category/Game/: index.html
category/GitHub/: index.html
category/GitLab/: index.html
category/Google/: index.html
category/LaTeX/: index.html
category/Mastodon/: index.html
contents/: 404.html  404.md  atom.yml  index.md  index.yml  index_category.yml  index_tag.yml  rss.yml
dev/: index.html
diary/: atom.xml  index.html  rss.rdf
favorite/: index.html
favs/: index.html
miniblog/: atom.xml  index.html  rss.rdf
samples/: .gitignore  config.yml  test.sh
tech/: atom.xml  index.html  rss.rdf
templates/: base.html  common.html  index.html  page_article.html  page_index.html
theme/: config.yml
times/: atom.xml  index.html  rss.rdf
works/: index.html
(+392 files in other folders)
