[metadata]
name = aoirint_miyadaiku_theme_blog
version = attr: aoirint_miyadaiku_theme_blog.__version__
url = https://github.com/aoirint/aoirint-miyadaiku-theme-blog/
author = aoirint
description = Blog theme for miyadaiku static site generator
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.7
packages = find:
include_package_data = true
zip_safe = false

setup_requires =
    wheel
    setuptools-git

install_requires =
    miyadaiku>=1.24.0
    miyadaiku-theme-fontawesome>=1.0.0.post1
    markdown>=3.2.2
